* Aug  1 2014 Massimiliano Pala <madwolf@openca.org>
- Fixed inconsistency in PKI_MEM_url_decode / PKI_MEM_url_encode functions
- Added PKI_MEM_url_get_encoded and PKI_MEM_url_get_decoded functions
- Fixed buffer size utilization in PKI_MSG_REQ and TOKEN to avoid possible buffer overflow
- Fixed make 'distclean' target

* May 10 2014 Massimiliano Pala <madwolf@openca.org>
- Fixed building library on AIX operating systems
- Fixed building library on Solaris (pre open-solaris) with old pthread
- Fixed signature generation error when setting the signing algorithm
- Fixed issues with X509_get_parsed() function and signature algorithm retrieval

* Mar 09 2014 Massimiliano Pala <madwolf@openca.org>
- Added possibility to remove DNS URLs support (buggy in old Solaris)
- Added checks for availability of pthreads' RWLOCK
- Added mutex-based implementation if RWLOCK is not supported

* Oct 20 2013 Massimiliano Pala <madwolf@openca.org>
- Fixed support for GCC pragma diagnostics 'pop' to accomodate older gcc versions
- Fixed support for 32 bits builds
- Fixed setting the right protocol when 'pki-tool genreq' is used without a config token

* Oct 19 2013 Massimiliano Pala <madwolf@openca.org>
- Fixed options parsing for pki-tool and pki-crl command-line tools

* Oct 18 2013 Massimiliano Pala <madwolf@openca.org>
- Added PKI_HMAC_* interface to handle HMACs more easily

* Oct 04 2013 Massimiliano Pala <madwolf@openca.org>
- Added example for generating PKCS#12 files
- Fixed generation of HTTP_MSG from POST messages with no body
- Fixed parsing file-based (with no protocol) URIs
- Fixed several bugs and memory leaks throughout the code base
- Enhanced --enable-extra-checks configure option by adding -Wall
- Fixed URL building for HTTP messages
- Added FIPS mode set/check (requires the underlying crypto provider to support FIPS mode)
- Added fips-mode example in the examples/ directory
- Added README.FIPS_140-2

* Aug 09 2013 Massimiliano Pala <madwolf@penca.org>