@@ -1,3 +1,8 @@
+* Aug  6 2014 Massimiliano Pala <madwolf@openca.org>
+- Added PKI_X509_OCSP_REQ_has_nonce() to easily detect NONCEs in OCSP requests
+- Moved to use calloc() to provide better cross-processes memory protection
+- Removed old commented code
+
 * Aug  1 2014 Massimiliano Pala <madwolf@openca.org>
 - Fixed inconsistency in PKI_MEM_url_decode / PKI_MEM_url_encode functions
 - Added PKI_MEM_url_get_encoded and PKI_MEM_url_get_decoded functions
